fixtures/frontend/milestone-1/valid/expressions/subject_and_ranges.aivi
type User = {
    email: Text
}

fun displayEmail:Text user:User =>
    .email

val current = .
val projection = .email
val span = 1..10
val values = [1..10]
