fixtures/frontend/milestone-1/invalid/gate_non_list.aivi
type User = { active: Bool }

val currentUser:User = { active: True }

val activeUser =
    currentUser
     ?|> .active
